# dawg

./: .gitignore  AGENTS.md  Build And Run DAWG.cmd  Build DAWG.cmd  CMakeLists.txt  CMakePresets.json  Open DAWG.cmd  README.md  Watch DAWG.cmd  dawg.code-workspace  vcpkg.json
docs/: native-viewport-handoff.md
notes/: quick-shell-migration-log.md  session-handoff-2026-03-19.md
rel/: CMakeCache.txt
rel2/: CMakeCache.txt
scripts/: Build-Dawg.ps1  Invoke-DawgDev.ps1  Run-Dawg.ps1  Watch-Dawg.ps1
src/: app_icon.rc  main.cpp  qtquickcontrols2.conf  resources.qrc
src/app/: ActionRegistry.cpp  ActionRegistry.h  AudioPlaybackCoordinator.cpp  AudioPlaybackCoordinator.h  AudioPoolQuickController.cpp  AudioPoolQuickController.h  AudioPoolService.cpp  AudioPoolService.h  ClipEditorSession.cpp  ClipEditorSession.h  ContextMenuController.cpp  ContextMenuController.h  DebugUiController.cpp  DebugUiController.h  DialogController.cpp  DialogController.h  FilePickerController.cpp  FilePickerController.h  MainWindow.cpp  MainWindow.h  MainWindowActions.cpp  MainWindowActions.h  MediaImportController.cpp  MediaImportController.h  MixStateStore.cpp  MixStateStore.h  NodeController.cpp  NodeController.h  NodeDocument.cpp  NodeDocument.h  NodeEditorDocumentUtils.cpp  NodeEditorDocumentUtils.h  NodeEditorEditSession.cpp  NodeEditorEditSession.h  NodeEditorPreviewSession.cpp  NodeEditorPreviewSession.h  NodeEditorWorkspaceSession.cpp  NodeEditorWorkspaceSession.h  PanelLayoutController.cpp  PanelLayoutController.h  (+38 more)
src/core/audio/: AudioDurationProbe.cpp  AudioDurationProbe.h  AudioEngine.cpp  AudioEngine.h  JuceAudioEngine.cpp  JuceAudioEngine.h  MciAudioEngine.cpp  MciAudioEngine.h  VideoAudioExtractor.cpp  VideoAudioExtractor.h
src/core/render/: D3D11RenderBackend.cpp  D3D11RenderBackend.h  IRenderBackend.h  RenderService.cpp  RenderService.h
src/core/tracking/: MotionTracker.cpp  MotionTracker.h  TrackTypes.h
src/core/video/: AnalysisFrameProvider.cpp  AnalysisFrameProvider.h  DecodedFrame.h  FfmpegVideoDecoder.cpp  FfmpegVideoDecoder.h  OpenCvVideoDecoder.cpp  OpenCvVideoDecoder.h  VideoDecoder.h  VideoFrame.h  VideoFrameQueue.h  VideoPlaybackService.cpp  VideoPlaybackService.h
src/qml/: AppShell.qml  AppTheme.qml  AudioPoolScene.qml  ClipEditorScene.qml  ClipGainStrip.qml  ContextMenuOverlay.qml  DebugOverlayScene.qml  DialogOverlay.qml  FilePickerOverlay.qml  MixScene.qml  MixStrip.qml  NodeEditorScene.qml  QuickTitleBar.qml  ShellLayoutScene.qml  ShellOverlay.qml  ThumbnailStripScene.qml  TimelineScene.qml  VideoViewportScene.qml
src/ui/: AudioClipPreviewTypes.h  ClipEditorQuickController.cpp  ClipEditorQuickController.h  ClipEditorTypes.h  ClipEditorView.cpp  ClipEditorView.h  ClipWaveformQuickItem.cpp  ClipWaveformQuickItem.h  DebugOverlayWindow.cpp  DebugOverlayWindow.h  MixQuickController.cpp  MixQuickController.h  MixTypes.h  MixView.cpp  MixView.h  NativeVideoViewport.cpp  NativeVideoViewport.h  NodeEditorQuickController.cpp  NodeEditorQuickController.h  QuickClipGainWidget.cpp  QuickClipGainWidget.h  QuickEngineSupport.cpp  QuickEngineSupport.h  QuickMixStripWidget.cpp  QuickMixStripWidget.h  ThumbnailStripQuickController.cpp  ThumbnailStripQuickController.h  TimelineQuickController.cpp  TimelineQuickController.h  TimelineThumbnailCache.cpp  TimelineThumbnailCache.h  TimelineTypes.h  TimelineView.cpp  TimelineView.h  VideoCanvas.cpp  VideoCanvas.h  VideoOverlayQuickItem.cpp  VideoOverlayQuickItem.h  VideoViewportQuickController.cpp  VideoViewportQuickController.h  (+2 more)
